BE/error/src/main/java/com/example/demo/schedule/persistence/ScheduleRepository.java
package com.example.demo.schedule.persistence;

import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.stereotype.Repository;
//import org.springframework.stereotype.Repository;

@Repository
public interface ScheduleRepository extends JpaRepository<ScheduleEntity, Long> {
}
